--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "sweetalert2": "^11.2.1",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
   },
