--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "chart.js": "2.9.4",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "sweetalert2": "^11.2.1",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
