--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "serve": "vue-cli-service serve",
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "yarn build",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "chart.js": "2.9.4",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
+    "serve-static": "^1.14.1",
     "sweetalert2": "^11.2.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
